--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,7 @@ databases:
     plan: free
     databaseName: chatpdf
     user: dbmaster
-    fromURL:
-      value: "postgres://dbmaster:HqvnyoS0mbxiSQWdMsrZrjAJBcEuC92D@dpg-cnb09j6d3nmc73doge40-a.oregon-postgres.render.com/chatpdf"
+    fromURL: "postgres://dbmaster:HqvnyoS0mbxiSQWdMsrZrjAJBcEuC92D@dpg-cnb09j6d3nmc73doge40-a.oregon-postgres.render.com/chatpdf"
 
 services:
   - type: web
