--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
     buildCommand: "./build.sh"
     startCommand: "python -m gunicorn EducacionChat.asgi:application -k uvicorn.workers.UvicornWorker"
     envVars:
-      - key: "postgres://dbmaster:HqvnyoS0mbxiSQWdMsrZrjAJBcEuC92D@dpg-cnb09j6d3nmc73doge40-a.oregon-postgres.render.com/chatpdf"
+      - key: "ChatPDF_DATABASE"
         fromDatabase:
           name: chatpdf
           property: connectionString
